src/frontend/static/css/correlation.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

#container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
}

.corr {
    height: calc(95vh - 48px - 54px);
    display: inline-block;
}

#chart-section {
    height: 100%;
    width: 100%;
}

.corr p {
    line-height: 1.3;
}

#warnings {
    height: 5vh;
    width: 100%;
    border-bottom: 1px solid black;
}

#warnings p {
    margin-left: 5px;
}

#warnings p,
#warnings em {
    font-size: 1.6vh;
}

#settings {
    width: 95px;
    background-color: white;
    padding: 10px;
}

#settings form {
    margin-top: 0.5vh;
    margin-right: 0.5vw;
}

#temp-oxy-view {
    width: 100%;
    height: 10vh;
}

#temp-oxy-view legend {
    float: right;
}

#dist-and-flow {
    width: 100%;
    min-height: 20vh;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(7, 1fr); 
    gap: 0px;
}

.dfCell {
	width:100%;
}

#grid1 {
    grid-column-start: 2;
    margin-left:auto;
}

#grid2 {
    grid-column-start: 1;
    grid-row-start: 2;
}

#grid3 {
    grid-column-start: 2;
    grid-row-start: 2;
}

#grid4 {
    grid-column-start: 2;
}

#grid5 {
    grid-column-start: 1;
    grid-row-start: 4;
}

#grid6 {
    grid-row-start: 4;
}

#grid7 {
    grid-column-start: 2;
}

#grid8 {
    grid-column-start: 1;
    grid-row-start: 6;
}

#grid9 {
    grid-column-start: 2;
    grid-row-start: 6;
}

#grid10 {
    grid-column-start: 2;
}

#dist-and-flow legend {
    float: right;
}

#dist-and-flow input[type=text] {
    width: 50%;
}

.dfCell input + label{
	font-size:85%;
}

#settings form #r {
    float:right;
    margin-right:2px;
}

#graph {
    width: 70vw;
}

#form {
    width: 17vw;
    border-left: 1px solid black;
}

#form form {
    margin-left: 0.5vw;
}
span + #break {
	display:inline;
}
input[type=submit]:disabled {
    color: grey;
}
input[type=number]{
	width:70%;
}
@media (max-width: 900px){
	#container{
		flex-direction: column;
	}
	.corr{
		height: auto;
		width: 100%;
	}
	#settings{
		width: 100%;
		order: 3;
	}
	#graph{
		width: 100%;
		order: 2;
		height:60vh;
	}
	#form{
		width: 100%;
		order: 1;
	}
	#warning{
		height: auto;
		min-height: 10vh;
	}
	#temp-oxy-view, #dist-and-flow{
		height: auto;	
	}
	#dist-and-flow input {
	    width: auto;
	}
	#dist-and-flow input[type=text]{
		width: 50%;
		margin-bottom: 5px;
	}
	#settings form {
		margin: 4px;
	}
	#form {
		height:70px;
	}
	#form form{
		margin: auto;
	}
	#settings form #r {
	    float: none;
	    margin-left: 20vw;
	    margin-bottom:1vh;
	}
	span + #break {
		display:none;
	}
}
@media (max-width: 480px) {
    #warnings p,
    #warnings em {
        font-size: 12px;
    }
    
    .corr {
        min-height: 4vh;
    }
}

